--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,7 @@
 play.crypto.secret="YEb;p2wllMLP>hF23cX2m3t?WoLcfp42xa:Ba:^Ui<UpyfGS>zYa>]w4^jhAWAV_"
 # https://www.playframework.com/documentation/latest/Configuration
 
+mongodb.host=localhost
+mongodb.port=27017
+
+play.modules.enabled += modules.MongodbModule
